# debian

./: .gitignore  Makefile.in  acinclude.m4  aclocal.m4  configure  configure.in  version-script.in  wx-config.in  wxPython.spec  wxwidgets2.6_2.6.3.2.2.orig.tar.gz.delta  wxwidgets2.6_2.6.3.2.2.orig.tar.gz.id  wxwidgets2.6_2.8.7.1.orig.tar.gz.delta  wxwidgets2.6_2.8.7.1.orig.tar.gz.id  wxwidgets2.8_2.8.10.1.orig.tar.gz.delta  wxwidgets2.8_2.8.10.1.orig.tar.gz.id
demos/: configure.in
demos/bombs/: bombs.cpp  bombs.h  bombs1.cpp  game.cpp  game.h
demos/dbbrowse/: browsedb.cpp  browsedb.h  dbbrowse.cpp  dbbrowse.h  dbgrid.cpp  dbgrid.h  dbtree.cpp  dbtree.h  dlguser.cpp  dlguser.h  doc.cpp  doc.h  pgmctrl.cpp  pgmctrl.h  std.h  tabpgwin.cpp  tabpgwin.h
demos/dbbrowse/CVS/: Entries  Repository
demos/forty/: canvas.cpp  canvas.h  card.cpp  card.h  forty.cpp  forty.h  game.cpp  game.h  pile.cpp  pile.h  playerdg.cpp  playerdg.h  scoredg.cpp  scoredg.h  scorefil.cpp  scorefil.h
demos/fractal/: fractal.cpp
demos/life/: dialogs.cpp  dialogs.h  game.cpp  game.h  life.cpp  life.h  reader.cpp  reader.h  samples.inc
demos/poem/: wxpoem.cpp  wxpoem.h
utils/: configure.in
utils/HelpGen/src/: HelpGen.cpp  cjparser.cpp  cjparser.h  docripper.cpp  docripper.h  ifcontext.cpp  ifcontext.h  markup.h  scriptbinder.cpp  scriptbinder.h  sourcepainter.cpp  sourcepainter.h  srcparser.cpp  srcparser.h  wxstlac.h  wxstllst.h  wxstlvec.h
utils/dialoged/CVS/: Entries  Repository
utils/dialoged/src/: dialoged.cpp  dialoged.h  (+15 more)
utils/makegen/: makegen.cpp
utils/wxrc/: wxrc.cpp
(+3490 files in other folders)
