dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Id: configure.in,v 1.1 2000/01/31 18:26:08 VZ Exp $)dnl

AC_INIT(Makefile.in)

AC_OUTPUT([
            Makefile
            bombs/Makefile
            dbbrowse/Makefile
            forty/Makefile
            fractal/Makefile
            life/Makefile
            poem/Makefile
         ])
