dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Id: configure.in,v 1.2 2002/01/25 11:59:25 VZ Exp $)dnl

AC_INIT(Makefile.in)

IF_GNU_MAKE=$wx_cv_if_gnu_make
AC_SUBST(IF_GNU_MAKE)

AC_OUTPUT([
            Makefile
            bombs/Makefile
            dbbrowse/Makefile
            forty/Makefile
            fractal/Makefile
            life/Makefile
            poem/Makefile
         ])
