dnl Process this file with autoconf to produce a configure script.
AC_REVISION($Id: configure.in,v 1.3 2000/03/05 19:03:20 GL Exp $)dnl

AC_INIT(Makefile.in)

GL_TOOLKIT_DIR=$wx_cv_path_glcanvas
AC_SUBST(GL_TOOLKIT_DIR)

AC_OUTPUT([
            Makefile
            makegen/Makefile
            HelpGen/Makefile
            HelpGen/src/Makefile
            tex2rtf/Makefile
            tex2rtf/src/Makefile
            hhp2cached/Makefile
            dialoged/Makefile
            dialoged/src/Makefile
         ])
